@@ -1,3 +1,6 @@
+2013-02-15  Alessandro Scalzo <alessandro.scalzo@iit.it>
+    * src/libYARP_dev/include/yarp/dev/IVirtualAnalogSensor.h
+
 2013-01-25  Paul Fitzpatrick  <paul@robotrebuilt.com>
 
 	* src/libYARP_OS/src/ResourceFinder.cpp: add ~/.yarp/POLICY.ini to
